tests/suite/fail/generated/types/fail_mul_i32_bool.ny
fn main() {
    let _ = 1 * true //~ ERROR type mismatch in `arithmetic` operation
}
